specs/001-typescript-to-zig-native/examples/invalid/import-missing.ts
import add from "./missing.ts";

console.log(add(1, 2));
